--- a/.github/workflows/security_pipeline.yml
+++ b/.github/workflows/security_pipeline.yml
@@ -40,10 +40,10 @@ jobs:
         # Ejecuta Bandit y guarda resultados en JSON y HTML
         # '|| true' asegura que el pipeline no se detenga si encuentra vulnerabilidades
         run: |
-          echo "Runing SAST detection..."
-          python -m bandit -r app.py -f json -o reports/bandit_report.json || true
-          python -m bandit -r app.py -f html -o reports/bandit_report.html || true
-          python -m bandit -r app.py -f txt || true
+          echo "Running SAST detection..."
+          python -m bandit -r server_main.py -f json -o reports/bandit_report.json || true
+          python -m bandit -r server_main.py -f html -o reports/bandit_report.html || true
+          python -m bandit -r server_main.py -f txt || true
 
       # ------------------------------------------------------------------
       # FASE 2: INICIAR APLICACIÓN
@@ -51,7 +51,7 @@ jobs:
       - name: Start Target Application
         # Iniciamos la app Flask en segundo plano (&)
         run: |
-          nohup python app.py > flask.log 2>&1 &
+          nohup python server_main.py > flask.log 2>&1 &
           echo "Waiting for application to start..."
           sleep 5
           cat flask.log
