--- a/.github/workflows/security_pipeline.yml
+++ b/.github/workflows/security_pipeline.yml
@@ -28,10 +28,19 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+          if [ -f requirements-test.txt ]; then pip install -r requirements-test.txt; fi
           pip install bandit
 
       - name: Create Reports Directory
         run: mkdir -p reports
+
+      # ------------------------------------------------------------------
+      # FASE 0: EJECUTAR TESTS UNITARIOS
+      # ------------------------------------------------------------------
+      - name: Run Unit Tests
+        run: |
+          echo "Running unit tests..."
+          pytest test_flask_app.py -v --tb=short -o junit_family=xunit2 --junitxml=reports/test-results.xml || true
 
       # ------------------------------------------------------------------
       # FASE 1: SAST (Static Analysis with Bandit)
@@ -86,3 +95,4 @@ jobs:
           path: |
             reports/
             zap-execution-report.html
+            test-results.xml
